--- a/src/app/components/audio/audio-instructions/audio-instructions.component.html
+++ b/src/app/components/audio/audio-instructions/audio-instructions.component.html
@@ -44,10 +44,10 @@
   </mat-dialog-content>
 
   <mat-dialog-actions>
-    <button mat-raised-button [mat-dialog-close]="true">
+    <button [mat-dialog-close]="true" mat-raised-button>
       {{t('close')}}
     </button>
-    <button mat-raised-button [mat-dialog-close]="true" color="primary" (click)="activateMicrophone()">
+    <button (click)="activateMicrophone()" [mat-dialog-close]="true" color="primary" mat-raised-button>
       {{t('done')}}
     </button>
   </mat-dialog-actions>
