--- a/src/app/components/audio/broadcast-test/broadcast-test.component.html
+++ b/src/app/components/audio/broadcast-test/broadcast-test.component.html
@@ -4,8 +4,8 @@
     <ng-container *ngIf="audioState.microphone">
       <p [innerHTML]="t('description', {mic: audioState.speakerSink.label})"></p>
 
-      <button *ngIf="play$.value" mat-flat-button color="primary" (click)="play$.next(false)">Pause</button>
-      <button *ngIf="!play$.value" mat-flat-button color="primary" (click)="play$.next(true)">Play</button>
+      <button (click)="play$.next(false)" *ngIf="play$.value" color="primary" mat-flat-button>Pause</button>
+      <button (click)="play$.next(true)" *ngIf="!play$.value" color="primary" mat-flat-button>Play</button>
 
       <app-audio [playState]="play$"></app-audio>
     </ng-container>
