--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,7 +1,7 @@
 <ng-container *transloco="let t; read: 'settings'">
   <ng-container *ngIf="settingsState$ | async as settings">
-    <mat-checkbox [checked]="settings.shareData"
-                  (change)="applySetting('shareData', $event.checked)">
+    <mat-checkbox (change)="applySetting('shareData', $event.checked)"
+                  [checked]="settings.shareData">
       {{t('shareData')}}
     </mat-checkbox>
   </ng-container>
