--- a/src/app/components/video/video-controls/video-controls.component.html
+++ b/src/app/components/video/video-controls/video-controls.component.html
@@ -2,26 +2,28 @@
   <ng-container *ngIf="settingsState$ | async as settings">
 
     <!-- Is signing indicator -->
-    <button mat-icon-button [disabled]="true" id="signing-indicator" aria-label="TODO"
-            [class.active]="isSigning$ | async">
+    <button [class.active]="isSigning$ | async" [disabled]="true" aria-label="TODO" id="signing-indicator"
+            mat-icon-button>
       <mat-icon>more_horiz</mat-icon>
     </button>
 
     <!-- Microphone -->
     <ng-container [ngSwitch]="settings.transmitAudio">
-      <button mat-fab class="transparent" *ngSwitchCase="true"
+      <button (click)="applySetting('transmitAudio', false)" *ngSwitchCase="true"
               [attr.aria-label]="t('transmitAudio.on')"
-              [matTooltip]="t('transmitAudio.on')"
               [matTooltipPosition]="'above'"
-              (click)="applySetting('transmitAudio', false)">
+              [matTooltip]="t('transmitAudio.on')"
+              class="transparent"
+              mat-fab>
         <mat-icon>mic</mat-icon>
       </button>
 
-      <button mat-fab color="warn" *ngSwitchCase="false"
+      <button (click)="applySetting('transmitAudio', true)" *ngSwitchCase="false"
               [attr.aria-label]="t('transmitAudio.off')"
-              [matTooltip]="t('transmitAudio.off')"
               [matTooltipPosition]="'above'"
-              (click)="applySetting('transmitAudio', true)">
+              [matTooltip]="t('transmitAudio.off')"
+              color="warn"
+              mat-fab>
         <mat-icon>mic_off</mat-icon>
       </button>
     </ng-container>
@@ -29,31 +31,34 @@
 
     <!-- Video -->
     <ng-container [ngSwitch]="settings.receiveVideo">
-      <button mat-fab class="transparent" *ngSwitchCase="true"
+      <button (click)="applySetting('receiveVideo', false)" *ngSwitchCase="true"
               [attr.aria-label]="t('receiveVideo.on')"
-              [matTooltip]="t('receiveVideo.on')"
               [matTooltipPosition]="'above'"
-              (click)="applySetting('receiveVideo', false)">
+              [matTooltip]="t('receiveVideo.on')"
+              class="transparent"
+              mat-fab>
         <mat-icon>videocam</mat-icon>
       </button>
 
-      <button mat-fab color="warn" *ngSwitchCase="false"
+      <button (click)="applySetting('receiveVideo', true)" *ngSwitchCase="false"
               [attr.aria-label]="t('receiveVideo.off')"
-              [matTooltip]="t('receiveVideo.off')"
               [matTooltipPosition]="'above'"
-              (click)="applySetting('receiveVideo', true)">
+              [matTooltip]="t('receiveVideo.off')"
+              color="warn"
+              mat-fab>
         <mat-icon>videocam_off</mat-icon>
       </button>
     </ng-container>
 
 
     <!-- Hand -->
-    <button mat-fab color="primary"
-            id="hand-selector" [class]="'dominant-'+settings.dominantHand"
-            [matTooltip]="t('dominantHand.' + settings.dominantHand)"
-            [matTooltipPosition]="'above'"
+    <button (click)="flipDominantHand(settings.dominantHand)"
             [attr.aria-label]="t('dominantHand.' + settings.dominantHand)"
-            (click)="flipDominantHand(settings.dominantHand)">
+            [class]="'dominant-'+settings.dominantHand" [matTooltipPosition]="'above'"
+            [matTooltip]="t('dominantHand.' + settings.dominantHand)"
+            color="primary"
+            id="hand-selector"
+            mat-fab>
       <mat-icon>pan_tool</mat-icon>
     </button>
 
