--- a/src/app/components/video/video.component.html
+++ b/src/app/components/video/video.component.html
@@ -4,7 +4,7 @@
   </ng-container>
 
   <div id="video-container">
-    <video #video class="flip" width="100%" height="100%"></video>
+    <video #video class="flip" height="100%" width="100%"></video>
     <div #stats [hidden]="!video.camera"></div>
   </div>
 
